--- a/postinstall-files/clear_xfce-notify-4.0_gtk.css
+++ b/postinstall-files/clear_xfce-notify-4.0_gtk.css
@@ -1,3 +1,8 @@
+#---------------------------------------------
+# XFCE4-NOTIFY CLEAR THEME
+#---------------------------------------------
+# Autor: Leonardo Marco
+
 #XfceNotifyWindow {
     background-color: #ffffff;
     color: #13071B;
