--- a/postinstall-files/clear_xfce-notify-4.0_gtk.css
+++ b/postinstall-files/clear_xfce-notify-4.0_gtk.css
@@ -1,7 +1,7 @@
-#---------------------------------------------
-# XFCE4-NOTIFY CLEAR THEME
-#---------------------------------------------
-# Autor: Leonardo Marco
+/* ---------------------------------------------
+ * XFCE4-NOTIFY CLEAR THEME
+ * Autor: Leonardo Marco
+ * --------------------------------------------- */
 
 #XfceNotifyWindow {
     background-color: #ffffff;
